sandbox/output
GildedRose.java:14: error: package item does not exist
            if(item.name.equals("Sulfuras, Hand of Ragnaros")){
                   ^
1 error
